# libcmmk

./: .gitignore  README.md
include/libcmmk/: libcmmk.h
src/: libcmmk.c
src/mappings/ansi/: mk730.h
src/mappings/iso/: mk730.h
test/: CMakeLists.txt  debug.c  test-effects.c
